--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
     "redis": "2.8.0",
     "cors": "2.8.4",
     "nodemon": "1.18.3",
-    "body-parser": "*"
+    "body-parser": "*",
+    "axios": ">=0.21.1"
   },
   "scripts": {
     "dev": "nodemon",
