--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
     "redis": "2.8.0",
     "cors": "2.8.4",
     "nodemon": "1.18.3",
-    "body-parser": "*",
-    "axios": ">=0.21.1"
+    "body-parser": "*"
   },
   "scripts": {
     "dev": "nodemon",
