adding skaffold.yaml

--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: client-deployment
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       component: web
@@ -15,5 +15,9 @@ spec:
       containers:
         - name: client
           image: lentera/multi-client
+          resources:
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
           ports:
             - containerPort: 3000
