--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -14,7 +14,17 @@ spec:
         - lentera.id
         - www.lentera.id
       secretName: lentera-id
-  rules: 
+  rules:
+    - http:
+        paths:
+          - path: /?(.*)
+            backend:
+              serviceName: client-cluster-ip-service
+              servicePort: 3000
+          - path: /api/?(.*)
+            backend:
+              serviceName: server-cluster-ip-service
+              servicePort: 5000
     - host: lentera.id
       http:
         paths:
